--- a/pages/formateur/classes.html
+++ b/pages/formateur/classes.html
@@ -350,40 +350,84 @@
 
                     <!-- Step 3: Contenu -->
                     <div id="step-3" class="hidden space-y-6">
-                        <div class="bg-gray-50 border-2 border-dashed border-gray-300 rounded-2xl p-8 text-center hover:bg-gray-100 transition-colors cursor-pointer"
-                            onclick="document.getElementById('file-upload').click()">
-                            <i data-lucide="upload-cloud" class="w-12 h-12 mx-auto text-gray-400 mb-2"></i>
-                            <p class="font-bold text-gray-700">Déposer vos fichiers ici</p>
-                            <p class="text-sm text-gray-500">PDF, Slides, Vidéos MP4 (Max 100MB)</p>
-                            <input type="file" id="file-upload" class="hidden" multiple
-                                onchange="alert('Fichiers ajoutés (simulation)')">
-                        </div>
-                        <div>
-                            <label class="block text-sm font-bold text-gray-700 mb-2">Liens Externes</label>
+                        <div class="bg-blue-50 p-4 rounded-xl border border-blue-100">
+                            <label class="block text-sm font-bold text-blue-900 mb-2">Ajouter un cours existant
+                                (Live/Enregistré)</label>
                             <div class="flex gap-2">
-                                <input type="text" placeholder="https://..."
+                                <select id="w-content-select"
+                                    class="flex-1 p-3 border border-blue-200 rounded-xl outline-none bg-white">
+                                    <option value="">Sélectionner un cours...</option>
+                                    <!-- Options injected via JS -->
+                                </select>
+                                <button onclick="addContentModule()"
+                                    class="px-4 py-2 bg-blue-600 text-white font-bold rounded-xl hover:bg-blue-700">Ajouter</button>
+                            </div>
+                            <div id="content-modules-list" class="mt-3 space-y-2"></div>
+                        </div>
+
+                        <div>
+                            <label class="block text-sm font-bold text-gray-700 mb-2">Liens Externes (Google Meet,
+                                Drive)</label>
+                            <div class="flex gap-2">
+                                <input type="text" id="w-link-url" placeholder="https://meet.google.com/..."
                                     class="flex-1 p-3 border border-gray-200 rounded-xl outline-none">
-                                <button
+                                <button onclick="addExternalLink()"
                                     class="px-4 py-2 bg-gray-100 text-gray-700 font-bold rounded-xl hover:bg-gray-200">Ajouter</button>
                             </div>
+                            <div id="external-links-list" class="mt-3 space-y-2"></div>
+                        </div>
+
+                        <div class="bg-gray-50 border-2 border-dashed border-gray-300 rounded-xl p-6 text-center hover:bg-gray-100 transition-colors cursor-pointer"
+                            onclick="document.getElementById('file-upload').click()">
+                            <i data-lucide="upload-cloud" class="w-8 h-8 mx-auto text-gray-400 mb-2"></i>
+                            <p class="text-sm font-bold text-gray-600">Fichiers (PDF, Slides)</p>
+                            <input type="file" id="file-upload" class="hidden" multiple
+                                onchange="alert('Fichiers ajoutés (simulation)')">
                         </div>
                     </div>
 
                     <!-- Step 4: Accès -->
-                    <div id="step-4" class="hidden text-center space-y-8 py-8">
-                        <div
-                            class="w-20 h-20 bg-green-100 rounded-full flex items-center justify-center mx-auto text-green-600 animate-bounce">
-                            <i data-lucide="check" class="w-10 h-10"></i>
+                    <div id="step-4" class="hidden space-y-6">
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 h-full">
+                            <!-- Code Generate -->
+                            <div class="space-y-4">
+                                <div>
+                                    <h3 class="text-lg font-bold text-gray-900">Code d'accès</h3>
+                                    <p class="text-sm text-gray-500 mb-2">Partagez ce code pour l'inscription manuelle.
+                                    </p>
+                                    <div
+                                        class="bg-gray-100 p-4 rounded-xl inline-flex items-center gap-3 border border-gray-200 w-full justify-between">
+                                        <span id="generated-code"
+                                            class="text-2xl font-mono font-bold text-gray-800 tracking-wider">CLASS-XXXX</span>
+                                        <button class="text-blue-600 hover:text-blue-700" title="Copier"><i
+                                                data-lucide="copy" class="w-5 h-5"></i></button>
+                                    </div>
+                                </div>
+                                <div class="bg-orange-50 p-4 rounded-xl border border-orange-100">
+                                    <h4 class="font-bold text-orange-800 text-sm flex items-center gap-2"><i
+                                            data-lucide="alert-circle" class="w-4 h-4"></i> Note</h4>
+                                    <p class="text-xs text-orange-700 mt-1">Le code permet l'accès si l'élève n'est pas
+                                        ajouté manuellement ci-contre.</p>
+                                </div>
+                            </div>
+
+                            <!-- Student Selection -->
+                            <div class="flex flex-col h-[300px]">
+                                <h3 class="text-lg font-bold text-gray-900 mb-2">Ajouter des élèves</h3>
+                                <input type="text" placeholder="Rechercher un élève..."
+                                    class="w-full p-2 border border-gray-200 rounded-lg text-sm mb-2 outline-none focus:border-blue-500"
+                                    onkeyup="filterStudents(this.value)">
+
+                                <div
+                                    class="flex-1 overflow-y-auto border border-gray-200 rounded-xl bg-gray-50 p-2 custom-scrollbar">
+                                    <div id="students-checklist" class="space-y-1">
+                                        <!-- Students injected via JS -->
+                                    </div>
+                                </div>
+                                <p class="text-right text-xs text-gray-500 mt-1"><span id="selected-count">0</span>
+                                    sélectionné(s)</p>
+                            </div>
                         </div>
-                        <div>
-                            <h3 class="text-xl font-bold text-gray-900 mb-2">Classe prête !</h3>
-                            <p class="text-gray-500">Code d'accès généré automatiquement</p>
-                        </div>
-                        <div class="bg-gray-100 p-4 rounded-xl inline-block border border-gray-200">
-                            <span id="generated-code"
-                                class="text-3xl font-mono font-bold text-gray-800 tracking-wider">CLASS-XXXX</span>
-                        </div>
-                        <p class="text-sm text-gray-400">Ce code sert de mot de passe pour vos sessions.</p>
                     </div>
                 </form>
             </div>
@@ -422,6 +466,7 @@
         let currentTab = 'classes';
         let wizStep = 1;
         let tempSlots = [];
+        let tempContents = []; // Array of content modules or links
         let currentPaymentStudent = null;
         let currentPaymentClass = null;
         let isEditing = false;
@@ -553,16 +598,22 @@
         }
 
         // --- Wizard Functions ---
-        function openCreateModal() {
+        async function openCreateModal() {
             isEditing = false;
             editingId = null;
             document.getElementById('create-modal').classList.remove('hidden');
             document.getElementById('wizard-form').reset();
             document.getElementById('generated-code').innerText = 'CLASS-XXXX';
             wizStep = 1;
-            updateWizardUI();
             tempSlots = [];
+            tempContents = [];
+
+            await loadAvailableContent();
+            await loadAvailableStudents();
+
+            updateWizardUI();
             renderSlots();
+            renderContents();
         }
 
         function closeModal() {
@@ -580,11 +631,18 @@
             document.getElementById('w-level').value = cls.level;
             document.getElementById('w-price').value = cls.price;
             document.getElementById('w-weeks').value = cls.weeksDuration;
+
             tempSlots = cls.slots || [];
+            tempContents = cls.contents || [];
+
+            await loadAvailableContent();
+            await loadAvailableStudents(cls.studentIds || []); // Mark existing
+
             document.getElementById('create-modal').classList.remove('hidden');
             wizStep = 1;
             updateWizardUI();
             renderSlots();
+            renderContents();
         }
 
         async function deleteClass(id) {
@@ -662,7 +720,127 @@
             `).join('');
         }
 
+        // --- Step 3 Content Logic ---
+        async function loadAvailableContent() {
+            const sessions = [
+                { id: 's1', title: 'Intro Python Live' }, { id: 's2', title: 'Workshop React' },
+                { id: 's3', title: 'Mentoring Projet' }
+            ]; // Mocked as requested for 'existing' courses
+            const select = document.getElementById('w-content-select');
+            select.innerHTML = '<option value="">Sélectionner un cours...</option>' +
+                sessions.map(s => `<option value="${s.id}">${s.title}</option>`).join('');
+        }
+
+        function addContentModule() {
+            const select = document.getElementById('w-content-select');
+            const value = select.value;
+            const text = select.options[select.selectedIndex].text;
+            if (!value) return;
+            tempContents.push({ type: 'session', title: text, value: value });
+            renderContents();
+        }
+
+        function addExternalLink() {
+            const input = document.getElementById('w-link-url');
+            if (!input.value) return;
+            let title = "Lien externe";
+            if (input.value.includes('meet.google')) title = "Google Meet";
+            else if (input.value.includes('drive.google')) title = "Google Drive";
+            tempContents.push({ type: 'link', title: title, value: input.value });
+            input.value = '';
+            renderContents();
+        }
+
+        function renderContents() {
+            const list = document.getElementById('content-modules-list');
+            const linksList = document.getElementById('external-links-list');
+            const modules = tempContents.filter(c => c.type === 'session');
+            const links = tempContents.filter(c => c.type === 'link');
+
+            list.innerHTML = modules.map((c, i) => `
+                <div class="flex items-center justify-between p-3 bg-white border border-gray-200 rounded-lg">
+                    <div class="flex items-center gap-3">
+                        <div class="p-2 bg-blue-100 text-blue-600 rounded-lg"><i data-lucide="video" class="w-4 h-4"></i></div>
+                        <span class="font-medium text-sm">${c.title}</span>
+                    </div>
+                    <button onclick="removeContent('${c.value}')" class="text-gray-400 hover:text-red-500"><i data-lucide="trash-2" class="w-4 h-4"></i></button>
+                </div>
+            `).join('');
+
+            linksList.innerHTML = links.map((c, i) => `
+                 <div class="flex items-center justify-between p-3 bg-white border border-gray-200 rounded-lg">
+                    <div class="flex items-center gap-3">
+                        <div class="p-2 bg-green-100 text-green-600 rounded-lg"><i data-lucide="link" class="w-4 h-4"></i></div>
+                        <div class="overflow-hidden">
+                            <span class="font-medium text-sm block">${c.title}</span>
+                            <span class="text-xs text-gray-400 truncate block max-w-[200px]">${c.value}</span>
+                        </div>
+                    </div>
+                    <button onclick="removeContent('${c.value}')" class="text-gray-400 hover:text-red-500"><i data-lucide="trash-2" class="w-4 h-4"></i></button>
+                </div>
+            `).join('');
+            lucide.createIcons();
+        }
+
+        function removeContent(val) {
+            const idx = tempContents.findIndex(c => c.value === val);
+            if (idx > -1) {
+                tempContents.splice(idx, 1);
+                renderContents();
+            }
+        }
+
+        // --- Step 4 Student Logic ---
+        async function loadAvailableStudents(existingStudents = []) {
+            let users = await dataManager.getAll('users');
+            // Mock users if empty for demo
+            if (!users || users.length === 0) {
+                users = [
+                    { id: 'u1', name: 'Sami Mansour', email: 'sami@example.com', role: 'student' },
+                    { id: 'u2', name: 'Leila Ben Youssef', email: 'leila@example.com', role: 'student' },
+                    { id: 'u3', name: 'Karim Jaziri', email: 'karim@example.com', role: 'student' }
+                ];
+            }
+            const students = users.filter(u => u.role === 'student');
+            const container = document.getElementById('students-checklist');
+            const existingIds = existingStudents.map(s => s.id);
+
+            container.innerHTML = students.map(s => `
+                <label class="flex items-center gap-3 p-2 hover:bg-gray-100 rounded-lg cursor-pointer transition-colors student-item">
+                    <input type="checkbox" class="student-checkbox w-5 h-5 rounded border-gray-300 text-blue-600 focus:ring-blue-500" value="${s.id}" data-name="${s.name}" data-email="${s.email}" ${existingIds.includes(s.id) ? 'checked' : ''} onchange="updateSelectedCount()">
+                    <div class="w-8 h-8 rounded-full bg-gray-200 flex items-center justify-center font-bold text-gray-500 text-xs">${s.name.charAt(0)}</div>
+                    <div class="flex-1">
+                        <p class="font-bold text-sm text-gray-900">${s.name}</p>
+                    </div>
+                </label>
+            `).join('');
+            updateSelectedCount();
+        }
+
+        function updateSelectedCount() {
+            const checkboxes = document.querySelectorAll('.student-checkbox:checked');
+            document.getElementById('selected-count').innerText = checkboxes.length;
+        }
+
+        function filterStudents(query) {
+            const items = document.querySelectorAll('.student-item');
+            items.forEach(item => {
+                const name = item.querySelector('p').innerText.toLowerCase();
+                if (name.includes(query.toLowerCase())) item.classList.remove('hidden');
+                else item.classList.add('hidden');
+            });
+        }
+
         async function finishCreation() {
+            const checkboxes = document.querySelectorAll('.student-checkbox:checked');
+            const selectedStudents = Array.from(checkboxes).map(cb => ({
+                id: cb.value,
+                name: cb.dataset.name,
+                email: cb.dataset.email,
+                amountPaid: 0,
+                payment: 'Non Payé'
+            }));
+
             const classData = {
                 name: document.getElementById('w-name').value,
                 category: document.getElementById('w-category').value,
@@ -670,8 +848,9 @@
                 price: parseFloat(document.getElementById('w-price').value),
                 weeksDuration: document.getElementById('w-weeks').value,
                 slots: tempSlots,
+                contents: tempContents,
                 accessCode: document.getElementById('generated-code').innerText,
-                studentIds: isEditing ? undefined : [],
+                studentIds: selectedStudents,
                 status: 'active',
                 image: 'https://images.unsplash.com/photo-1544716278-ca5e3f4abd8c?w=800',
                 createdAt: new Date().toISOString()
