--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
 
             <div class="flex items-center gap-4">
-                <a href="pages/login-etudiant.html"
+                <a href="pages/login-choix.html"
                     class="hidden md:block text-base font-bold text-gray-600 hover:text-indigo-600 px-4 py-2">Connexion</a>
                 <a href="pages/entreprise/inscription.html"
                     class="bg-indigo-600 hover:bg-indigo-700 text-white px-8 py-3 rounded-full font-bold shadow-xl shadow-indigo-200 transition-all hover:scale-105 hover:shadow-indigo-300 transform active:scale-95">
