--- a/pages/formateur/calendar.html
+++ b/pages/formateur/calendar.html
@@ -194,7 +194,24 @@
     <script src="../../js/data-manager.js"></script>
     <script src="../../js/components/sidebar-formateur.js"></script>
     <script>
+        // Initialize state
         let currentDate = new Date();
+        let classes = [];
+
+        // INIT
+        document.addEventListener('DOMContentLoaded', async () => {
+            if (window.dataManager) {
+                await dataManager.init();
+                classes = await dataManager.getAll('courses') || [];
+            } else {
+                console.error("DataManager not found");
+            }
+            renderCalendar();
+            renderAgenda();
+            lucide.createIcons();
+        });
+
+        // --- CALENDAR LOGIC ---
 
         function getDaysInMonth(date) {
             const year = date.getFullYear();
@@ -215,28 +232,34 @@
                 d1.getFullYear() === d2.getFullYear();
         }
 
-        function generateSessions(classes, monthDate) {
+        // Generate actual session instances based on weekly slots
+        function generateSessions(classesList, targetDate, view = 'month') {
             const sessions = [];
-            const year = monthDate.getFullYear();
-            const month = monthDate.getMonth();
+            const year = targetDate.getFullYear();
+            const month = targetDate.getMonth();
             const daysInMonth = new Date(year, month + 1, 0).getDate();
 
+            // Map Day Names to JS getDay() index
+            const dayMap = { 'Dimanche': 0, 'Lundi': 1, 'Mardi': 2, 'Mercredi': 3, 'Jeudi': 4, 'Vendredi': 5, 'Samedi': 6 };
+
+            // For monthly view, check every day of the month
             for (let day = 1; day <= daysInMonth; day++) {
                 const date = new Date(year, month, day);
-                const dayName = ['Dimanche', 'Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi', 'Samedi'][date.getDay()];
+                const dayIndex = date.getDay(); // 0-6
 
-                classes.forEach(cls => {
-                    const activeSlots = cls.slots.filter(s => s.day === dayName);
+                classesList.forEach(cls => {
+                    const activeSlots = (cls.slots || []).filter(s => dayMap[s.day] === dayIndex);
                     activeSlots.forEach(slot => {
                         sessions.push({
                             id: cls.id,
-                            title: cls.name,
-                            startTime: slot.startTime,
-                            endTime: slot.endTime,
+                            title: cls.name || cls.title,
+                            startTime: slot.start || slot.startTime,
+                            endTime: slot.end || slot.endTime,
                             date: date,
-                            type: cls.category === 'scolaire' ? 'blue' : 'purple',
-                            categoryLabel: cls.category === 'scolaire' ? 'Scolaire' : 'Formation',
-                            accessCode: cls.accessCode
+                            type: (cls.category === 'scolaire') ? 'blue' : 'purple',
+                            categoryLabel: cls.category || 'Cours',
+                            accessCode: cls.accessCode,
+                            link: (cls.contents && cls.contents.find(c => c.type === 'link')) ? cls.contents.find(c => c.type === 'link').value : null
                         });
                     });
                 });
@@ -247,7 +270,6 @@
         function renderCalendar() {
             const grid = document.getElementById('calendar-grid');
             const monthTitle = document.getElementById('current-month');
-            const classes = DataManager.getClasses();
 
             monthTitle.textContent = currentDate.toLocaleString('fr-FR', { month: 'long', year: 'numeric' });
 
@@ -270,11 +292,9 @@
                     const daySessions = sessions.filter(s => isSameDay(s.date, day));
                     daySessions.forEach(s => {
                         const chip = document.createElement('div');
-                        if (s.type === 'blue') {
-                            chip.className = 'px-2 py-1 rounded bg-blue-50 border-l-2 border-blue-500 text-xs font-semibold text-blue-700 truncate cursor-pointer hover:bg-blue-100 transition-colors';
-                        } else {
-                            chip.className = 'px-2 py-1 rounded bg-purple-50 border-l-2 border-purple-500 text-xs font-semibold text-purple-700 truncate cursor-pointer hover:bg-purple-100 transition-colors';
-                        }
+                        const colorClass = s.type === 'blue' ? 'bg-blue-50 border-blue-500 text-blue-700 hover:bg-blue-100' : 'bg-purple-50 border-purple-500 text-purple-700 hover:bg-purple-100';
+                        chip.className = `px-2 py-1 rounded border-l-2 text-xs font-semibold truncate cursor-pointer transition-colors ${colorClass}`;
+
                         chip.textContent = `${s.startTime} ${s.title}`;
                         chip.onclick = () => alert(`Session: ${s.title}\nHeure: ${s.startTime} - ${s.endTime}`);
                         cell.appendChild(chip);
@@ -284,17 +304,16 @@
                 }
                 grid.appendChild(cell);
             });
-
             lucide.createIcons();
         }
 
         function renderAgenda() {
             const list = document.getElementById('agenda-list');
-            const classes = DataManager.getClasses();
-            const today = new Date();
+            const today = new Date(); // Always show real today in sidebar
 
             document.getElementById('today-date-sidebar').textContent = today.toLocaleString('fr-FR', { weekday: 'long', day: 'numeric', month: 'long' });
 
+            // Generate sessions only for today
             const sessions = generateSessions(classes, today).filter(s => isSameDay(s.date, today));
 
             if (sessions.length === 0) {
@@ -304,26 +323,26 @@
                         <p class="text-sm font-medium">Aucune session aujourd'hui</p>
                     </div>
                 `;
-                lucide.createIcons();
-                return;
+            } else {
+                list.innerHTML = sessions.map(s => `
+                    <div class="bg-gray-50 p-4 rounded-xl border border-gray-100 hover:border-blue-200 transition-colors group">
+                        <p class="text-sm font-medium text-gray-500 mb-1 flex justify-between">
+                            <span>${s.startTime} - ${s.endTime}</span>
+                            <span class="text-xs bg-white px-2 py-0.5 rounded border border-gray-200 uppercase">${s.categoryLabel}</span>
+                        </p>
+                        <h4 class="font-bold text-gray-900 text-base mb-4 line-clamp-2">${s.title}</h4>
+                        <button onclick="joinSession('${s.link || ''}')" class="w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg font-bold text-sm shadow-md transition-transform hover:-translate-y-0.5 flex items-center justify-center gap-2">
+                             ${s.link ? 'Rejoindre Meet' : 'Pas de lien'}
+                        </button>
+                    </div>
+                `).join('');
             }
-
-            list.innerHTML = sessions.map(s => `
-                <div class="bg-gray-50 p-4 rounded-xl border border-gray-100 hover:border-blue-200 transition-colors group">
-                    <p class="text-sm font-medium text-gray-500 mb-1">${s.startTime} - ${s.endTime} <span class="ml-2 text-xs bg-white px-2 py-0.5 rounded border border-gray-200">${s.categoryLabel}</span></p>
-                    <h4 class="font-bold text-gray-900 text-base mb-4">${s.title}</h4>
-                    <button onclick="joinSession('${s.accessCode}')" class="w-full py-2 bg-blue-600 hover:bg-blue-700 text-white rounded-lg font-bold text-sm shadow-md transition-transform hover:-translate-y-0.5 flex items-center justify-center gap-2">
-                        Rejoindre
-                    </button>
-                </div>
-            `).join('');
-
             lucide.createIcons();
         }
 
-        function joinSession(code) {
-            alert(`Lancement de la réunion Google Meet : ${code}`);
-            window.open(`https://meet.google.com/${code}`, '_blank');
+        function joinSession(link) {
+            if (link) window.open(link, '_blank');
+            else alert("Aucun lien de réunion configuré pour ce cours.");
         }
 
         function changeMonth(delta) {
@@ -335,12 +354,6 @@
             currentDate = new Date();
             renderCalendar();
         }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            renderCalendar();
-            renderAgenda();
-            lucide.createIcons();
-        });
     </script>
 </body>
 
