--- a/pages/formateur/calendar.html
+++ b/pages/formateur/calendar.html
@@ -149,10 +149,10 @@
                         </div>
 
                         <div class="flex bg-gray-100 p-1.5 rounded-xl self-start lg:self-center">
-                            <button
-                                class="px-4 py-2 bg-white shadow-sm rounded-lg text-sm font-bold text-gray-900">Mois</button>
-                            <button
-                                class="px-4 py-2 text-sm font-medium text-gray-500 hover:text-gray-900">Semaine</button>
+                            <button id="btn-view-month" onclick="setView('month')"
+                                class="px-4 py-2 bg-white shadow-sm rounded-lg text-sm font-bold text-gray-900 transition-all">Mois</button>
+                            <button id="btn-view-week" onclick="setView('week')"
+                                class="px-4 py-2 text-sm font-medium text-gray-500 hover:text-gray-900 transition-all">Semaine</button>
                         </div>
                     </div>
 
