--- a/pages/formateur/calendar.html
+++ b/pages/formateur/calendar.html
@@ -153,6 +153,8 @@
                                 class="px-4 py-2 bg-white shadow-sm rounded-lg text-sm font-bold text-gray-900 transition-all">Mois</button>
                             <button id="btn-view-week" onclick="setView('week')"
                                 class="px-4 py-2 text-sm font-medium text-gray-500 hover:text-gray-900 transition-all">Semaine</button>
+                            <button id="btn-view-day" onclick="setView('day')"
+                                class="px-4 py-2 text-sm font-medium text-gray-500 hover:text-gray-900 transition-all">Jour</button>
                         </div>
                     </div>
 
